--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,94 +5,143 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Capgemini</title>
-    <link type="text/css" rel="stylesheet" href="/frontend/css/style.css">
+    <title>Document</title>
+    <link type="text/css" rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+        <link type="text/css" rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link type="text/css" rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-    <div class="lista">
+<body ng-app="principal" ng-controller="Controller">
+    <!-- {{itens}} -->
+    <br>
+ 
 
-        <h1>Lista de Pedidos</h1>
-        <button>Novo Pedido</button><br>
-        Digite o que procura: <input type="text"> <button>Buscar</button>
-        <table>
-            <tr>
-                <th>Código</th>
-                <th>Cliente</th>
-                <th>Total</th>
-                <th>Status</th>
-                <th>Editar</th>
-                <th>Excluir</th>
-            </tr>
-            <tr>
-                <td>123</td>
-                <td>Smith</td>
-                <td>R$ 50.00</td>
-                <td>Entregue
-                <td><a href="#">Editar</a></td>
-                <td><a href="#">Excluir</a></td>
-                </td>
-            </tr>
-            <tr>
-                <td>456</td>
-                <td>Jackson</td>
-                <td>R$ 40.00</td>
-                <td>Cancelado
-                <td><a href="#">Editar</a></td>
-                <td><a href="#">Excluir</a></td>
-                </td>
-            </tr>
-        </table>
+    <div class="lista" ng-if="tela == 'lista'">
+        <div class="container">
+            <h1>Lista de pedidos</h1>
+            <div class="area">
+                <button ng-click="mudarTela('batata')">Novo pedido</button>
+                <br>
+                Digite o que procura:
+                <input type="text">
+                <button>buscar</button>
+            </div>
+            <br>
+            <div class="row">
+                <table class="table table-striped table-hover">
+                    <tr>
+                        <th>codigo</th>
+                        <th>cliente</th>
+                        <th>total</th>
+                        <th>status</th>
+                        <th>editar</th>
+                        <th>excluir</th>
+                    </tr>
+                    <tr>
+                        <td>123</td>
+                        <td>Smith</td>
+                        <td>R$ 50.00</td>
+                        <td>entregue</td>
+                        <td>
+                            <a href="#">excluir</a>
+                        </td>
+                        <td>
+                            <a href="#">editar</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>365</td>
+                        <td>Jackson</td>
+                        <td>R$ 140.00</td>
+                        <td>produzindo</td>
+                        <td>
+                            <a href="#">editar</a>
+                        </td>
+                        <td>
+                            <a href="#">excluir</a>
+                        </td>
+                    </tr>
+                </table>
+                <nav aria-label="Page navigation example">
+                    <ul class="pagination">
+                        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
     </div>
-
-    <div class="pedido">
+    <div class="pedido" ng-if="tela == 'batata' || tela == 'bebida'">
         <h1>Pedido</h1>
-        <h2>Escolha as batatas</h2>
+        <h2 ng-if="tela=='batata'">Escolha as batatas</h2>
+        <h2 ng-if="tela=='bebida'">Escolha a bebida</h2>
+        <div class="etapas">
+        <div class="row">
+            <div class="container">
+                <div class="btn-group btn-group-lg" role="group" aria-label="Grupos de botões grandes">
+                    <button type="button" class="btn btn-primary" ng-click="mudarTela('batata')">Batata</button>
+                    <button type="button" class="btn btn-primary" ng-click="mudarTela('bebida')">Bebida</button>
+                    <button type="button" class="btn btn-primary" ng-click="mudarTela('resumo')">Resumo</button>
+                </div>
+            </div>
+        </div>
     </div>
-    <ul class="batatas">
-        <li class="batata-wrapper">
-            <div class="batata">
-                <span>plin</span>
-                <h3>Titulo</h3>
-                <h4>Preço: R$ 20.00</h4>
-                <ul class="ingredientes">
-                    <li class="ingrediente">Ingrediente1</li>
-                    <li class="ingrediente">Ingrediente2</li>
-                    <li class="ingrediente">Ingrediente3</li>
-                    <li class="ingrediente">Ingrediente4</li>
-                    <li class="ingrediente">Ingrediente5</li>
-                </ul>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6" ng-repeat="batata in itens" ng-if="batata.tipo=='BATATA'">
+					<div class="batata-wrapper" ng-if="tela=='batata'">
+						<span class="icone-success"><i class="fas fa-check-circle"></i></span>
+						<h3>{{batata.nome}}</h3>
+						<ul class="ingredientes list-group-flush">
+							<li class="ingrediente list-group-item" ng-repeat="ingrediente in batata.ingredientes">
+								{{ingrediente.nome}}
+							</li>
+						</ul>
+						<div class="contador-wrapper">
+							<button type="button" class="btn btn-primary"><i class="fas fa-plus"></i></button>
+							<input type="number" class="contador">
+							<button type="button" class="btn btn-primary"><i class="fas fa-minus"></i></button>
+							<span class="preco">R$ 20.00</span>
+						</div>
+                    </div>
+                </div>
+                <div class="col-sm-6" ng-repeat="bebida in itens" ng-if="bebida.tipo=='REFRI' || bebida.tipo =='AGUA' || bebida.tipo=='SUCO'">
+					<div class="bebida-wrapper" ng-if="tela=='bebida'">
+						<span class="icone-success"><i class="fas fa-check-circle"></i></span>
+						<h3>{{bebida.nome}}</h3>
+						</ul>
+						<div class="contador-wrapper">
+							<button type="button" class="btn btn-primary"><i class="fas fa-plus"></i></button>
+							<input type="number" class="contador">
+							<button type="button" class="btn btn-primary"><i class="fas fa-minus"></i></button>
+							<span class="preco">R$ 20.00</span>
+						</div>
+                    </div>
+                </div>                               
             </div>
-        </li>
-        <li class="batata-wrapper">
-            <div class="batata">
-                <span>plin</span>
-                <h3>Titulo</h3>
-                <h4>Preço: R$ 20.00</h4>
-                <ul class="ingredientes">
-                    <li class="ingrediente">Ingrediente1</li>
-                    <li class="ingrediente">Ingrediente2</li>
-                    <li class="ingrediente">Ingrediente3</li>
-                    <li class="ingrediente">Ingrediente4</li>
-                    <li class="ingrediente">Ingrediente5</li>
-                </ul>
-            </div>
-        </li>
-        <li class="batata-wrapper">
-            <div class="batata">
-                <span>plin</span>
-                <h3>Titulo</h3>
-                <h4>Preço: R$ 20.00</h4>
-                <ul class="ingredientes">
-                    <li class="ingrediente">Ingrediente1</li>
-                    <li class="ingrediente">Ingrediente2</li>
-                    <li class="ingrediente">Ingrediente3</li>
-                    <li class="ingrediente">Ingrediente4</li>
-                    <li class="ingrediente">Ingrediente5</li>
-                </ul>
-            </div>
-        </li>
-    </ul>
+        </div>
+		
+    </div>
+    <div class="btnVoltar">
+        <button ng-if="tela=='bebida'" type="button" class="btn btn-primary" ng-click="mudarTela('batata')">Voltar</button>
+        <button ng-if="tela=='batata'" type="button" class="btn btn-primary" ng-click="mudarTela('lista')">Voltar</button>
+        <button ng-if="tela=='resumo'" type="button" class="btn btn-primary" ng-click="mudarTela('bebida')">Voltar</button>
+    </div>
+
+
+    <!--/#scripts--> 
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>	
+    <script type="text/javascript" src="js/vendor/angular/angular-1.5.8.js"></script>
+    <script type="text/javascript" src="js/app/app.js"></script>
+    <script type="text/javascript" src="js/app/controller.js"></script>
 </body>
 
 </html>
