--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,35 +33,35 @@
             <div class="row">
                 <table class="table table-striped table-hover">
                     <tr>
-                        <th>codigo</th>
-                        <th>cliente</th>
-                        <th>total</th>
-                        <th>status</th>
-                        <th>editar</th>
-                        <th>excluir</th>
+                        <th>Codigo</th>
+                        <th>Cliente</th>
+                        <th>Total</th>
+                        <th>Status</th>
+                        <th>Editar</th>
+                        <th>Excluir</th>
                     </tr>
                     <tr>
                         <td>123</td>
                         <td>Smith</td>
                         <td>R$ 50.00</td>
-                        <td>entregue</td>
+                        <td>Entregue</td>
                         <td>
-                            <a href="#">excluir</a>
+                            <a href="#">Editar</a>
                         </td>
                         <td>
-                            <a href="#">editar</a>
+                            <a href="#">Excluir</a>
                         </td>
                     </tr>
                     <tr>
                         <td>365</td>
                         <td>Jackson</td>
                         <td>R$ 140.00</td>
-                        <td>produzindo</td>
+                        <td>Produzindo</td>
                         <td>
-                            <a href="#">editar</a>
+                            <a href="#">Editar</a>
                         </td>
                         <td>
-                            <a href="#">excluir</a>
+                            <a href="#">Excluir</a>
                         </td>
                     </tr>
                 </table>
@@ -108,7 +108,7 @@
 							<button type="button" class="btn btn-primary"><i class="fas fa-plus"></i></button>
 							<input type="number" class="contador">
 							<button type="button" class="btn btn-primary"><i class="fas fa-minus"></i></button>
-							<span class="preco">R$ 20.00</span>
+							<span class="preco">{{batata.preco | currency:"R$"}}</span>
 						</div>
                     </div>
                 </div>
@@ -116,12 +116,11 @@
 					<div class="bebida-wrapper" ng-if="tela=='bebida'">
 						<span class="icone-success"><i class="fas fa-check-circle"></i></span>
 						<h3>{{bebida.nome}}</h3>
-						</ul>
 						<div class="contador-wrapper">
 							<button type="button" class="btn btn-primary"><i class="fas fa-plus"></i></button>
 							<input type="number" class="contador">
 							<button type="button" class="btn btn-primary"><i class="fas fa-minus"></i></button>
-							<span class="preco">R$ 20.00</span>
+							<span class="preco">{{bebida.preco | currency:"R$"}}</span>
 						</div>
                     </div>
                 </div>                               
